--- a/jamin.html
+++ b/jamin.html
@@ -99,7 +99,7 @@
 
 
 
-    <a href="fanpage.html"><p align="center">Link zur Tisgaras Seite</p></a>
+    <a href="index.html"><p align="center">Link zur Tisgaras Seite</p></a>
     <a href="julia.html"><p align="center">Link zu Julia</p></a>
 
 </body>
