--- a/julia.html
+++ b/julia.html
@@ -101,7 +101,7 @@
 
 </body>
 
-    <a href="fanpage.html"><p align="center">Link zur Tisgaras Seite</p></a>
+    <a href="index.html"><p align="center">Link zur Tisgaras Seite</p></a>
     <a href="jamin.html"><p align="center">Link zu Jamin</p></a>
 
 
