--- a/Schulaufgabe.html
+++ b/Schulaufgabe.html
@@ -103,7 +103,7 @@
                 <td>ewhfu3hfdi</td>
             </tr>
         </table>
-        <a href="fanpage.html"><p align="center">Link zur Tisgaras Seite</p></a>
+        <a href="index.html"><p align="center">Link zur Tisgaras Seite</p></a>
 
     </body>
 
