--- a/Schulaufgabe.html
+++ b/Schulaufgabe.html
@@ -50,7 +50,7 @@
 
     <body>
         <div class="topnav">
-            <a class="active" href="fanpage.html">Home</a>
+            <a class="active" href="index.html">Home</a>
             <a href="julia.html">Julia</a>
             <a href="jamin.html">Jamin</a>
             <a href="Schulaufgabe.html">Schulaufgabe</a>
