--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </head>
     <header>
         <div class="topnav">
-            <a class="active" href="fanpage.html">Home</a>
+            <a class="active" href="index.html">Home</a>
             <a href="julia.html">Julia</a>
             <a href="jamin.html">Jamin</a>
             <a href="Schulaufgabe.html">Schulaufgabe</a>
