--- a/julia.html
+++ b/julia.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="fanpage.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="julia.html">Julia</a>
         <a href="jamin.html">Jamin</a>
         <a href="Schulaufgabe.html">Schulaufgabe</a>
